--- a/src/main/resources/tree/tree.html
+++ b/src/main/resources/tree/tree.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link type="text/css" rel="stylesheet" href="documentation.css"/>
     </head>
     <body>
         <script language="JavaScript" src="tree.js"></script>
